[Cronet] Don't send endOfStream if there is pending data to flush on iOS.

BUG=623988

Review-Url: https://codereview.chromium.org/2128633004
Cr-Commit-Position: refs/heads/master@{#404691}

Former-commit-id: a3e2f52dbaabf8769c9e83cf2798f3760ccd7603